[project]
name = "moomoo-data"
version = "0.1.0"
description = "Moomoo OpenD data provider for HKSE/KLSE markets with capital flow analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "hwaseong", email = "hwaseong.tan@gmail.com"}
]
keywords = ["moomoo", "HKSE", "KLSE", "stock", "finance", "trading", "capital flow"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "moomoo-api>=1.0.0",
]

[project.optional-dependencies]
cache = ["aiosqlite>=0.19.0"]
yfinance = ["yfinance>=0.2.28"]
akshare = ["akshare>=1.12.0"]
redis = ["redis>=4.5.0"]
all = ["moomoo-data[cache,yfinance,akshare,redis]"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/hwase0ng/moomoo-data"
Documentation = "https://github.com/hwase0ng/moomoo-data#readme"
Repository = "https://github.com/hwase0ng/moomoo-data"
Changelog = "https://github.com/hwase0ng/moomoo-data/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["moomoo_data"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=moomoo_data --cov-report=term-missing"
